fix poster alignment on mobile

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -326,9 +326,10 @@ a:active {
   margin: 32px 0em 0em 2em;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 863px) {
   .movie-view img {
     height: 320px;
+    margin: 32px auto;
   }
 }
 
